actual reading of CloudTrail files reported by SNS to SQS